# NLPdrill2020

./: .gitignore  README.md  pyproject.toml
note/: buildingenvironment.md
src/: Chapter1.ipynb
